fix the stupid code commit

--- a/beliefs.html
+++ b/beliefs.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>95 Theses</title>
+    <title>Beliefs</title>
     <meta name="description" content="">
+    <link rel="icon" type="image/png" href="images/LL_icon.png" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -30,31 +31,31 @@
                 to the Bible as the inspired and inerrant Word of God and the sole source of authority for faith and
                 life. Central to LCMS teaching is the doctrine of justification by grace through faith in Christ alone,
                 affirming that salvation is a free gift of God's grace, received through faith in Jesus' life, death,
-                and resurrection.
+                and resurrection. <br>
 
-                LCMS adheres to the Book of Concord (1580), a collection of Lutheran confessions, as an accurate
+               LCMS adheres to the Book of Concord (1580), a collection of Lutheran confessions, as an accurate
                 interpretation of Scripture. The church emphasizes the proper distinction between Law and Gospel, with
                 the Law showing humans their sin and need for a Savior and the Gospel proclaiming the forgiveness and
-                salvation offered in Christ.
+                salvation offered in Christ.<br>
 
                 The Sacraments play a vital role in LCMS theology. Baptism is seen as a means of grace that grants
                 forgiveness, faith, and eternal life, including for infants. The Lord's Supper (Holy Communion) is
                 regarded as the true body and blood of Christ, given for the forgiveness of sins, and is practiced with
-                a closed communion policy, inviting only those who share LCMS beliefs.
+                a closed communion policy, inviting only those who share LCMS beliefs.<br>
 
                 LCMS upholds traditional views on marriage, human sexuality, and life issues, teaching that marriage is
                 a union between one man and one woman, and life is sacred from conception. The church maintains a
                 male-only pastorate, citing scriptural directives, while recognizing the valuable service of women in
-                other roles.
+                other roles.<br>
 
                 Worship in LCMS congregations is liturgical, centered on Word and Sacrament. The church emphasizes
-                catechesis (teaching of the faith), missionary outreach, and the importance of Christian education.
+                catechesis (teaching of the faith), missionary outreach, and the importance of Christian education.<br>
 
                 The LCMS fosters a strong commitment to doctrinal purity and confessional integrity, encouraging members to live
-                according to biblical teachings and to proclaim the Gospel faithfully in all aspects of life.
+                according to biblical teachings and to proclaim the Gospel faithfully in all aspects of life.<br>
             
                 Form more information on our beliefs, feel free to contact us, or visit <a href="https://catechism.cph.org/">Luther's Small Catechism</a></p>
-
+        </div>
         </div>
  
         <footer class="w3-bar w3-theme">
@@ -65,6 +66,7 @@
                 <a href="https://oursaviorlynchburg.org/" class="w3-bar-item w3-button" target="_blank">Connect with Our
                     Savior Lutheran Church</a>
                 <a href="https://www.lcms.org/" class="w3-bar-item w3-button" target="_blank">More about the LCMS</a>
+                <a href="https://catechism.cph.org/" class="w3-bar-item w3-button" target="_blank">Luther's Small Catechism</a>
             </div>
         </footer>
 
