--- a/events.html
+++ b/events.html
@@ -63,6 +63,7 @@
         <div class="flex-container" id="foot-links">
             <a href="https://oursaviorlynchburg.org/" class="w3-bar-item w3-button" target="_blank">Connect with Our Savior Lutheran Church</a>
             <a href="https://www.lcms.org/" class="w3-bar-item w3-button" target="_blank">More about the LCMS</a>
+            <a href="https://catechism.cph.org/" class="w3-bar-item w3-button" target="_blank">Luther's Small Catechism</a>
         </div>
     </footer>
     <script src="proj6.js"></script>
