--- a/rides.html
+++ b/rides.html
@@ -10,8 +10,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 
 
     <!--Reworked the form to use jQuery to hide/show parts of the form instead of 
@@ -42,8 +43,9 @@
             <a href="beliefs.html" class="w3-bar-item w3-button">What We Believe</a>
         </div>
     </nav>
-
-    <div class="second w3-theme3">
+<div>
+    <div class="first w3-theme3">
+        <div class="second">
         <h1 class="welcome">Carpool</h1>
         <p>
             Every Sunday, we coordinate rides to make sure that everyone who wants to come to church can come. Whether you need a ride, or can give a ride, please 
@@ -57,8 +59,14 @@
             <input type="radio" id="need" name="ride" value="Need Ride">
             <label for="need">I need a ride</label><br>
 
-            <label for="fname">Please input your first name:</label><br>
-            <input type="text" id="fname"><br>
+            <div ng-app="myApp" ng-controller="personCtrl">
+
+                First Name: <input type="text" ng-model="firstName"><br>
+                Last Name: <input type="text" ng-model="lastName"><br>
+                <br>
+                Welcome: {{fullName()}}
+                
+                </div>
 
             <label for="phone">Please input your phone number:</label><br>
             <input type="text" id="phone"><br>
@@ -76,6 +84,7 @@
         </form>
         <p id="displayName"></p>
     </div>
+</div>
 
     <footer class="w3-bar w3-theme">
         <div class="flex-container1">
@@ -84,6 +93,7 @@
         <div class="flex-container" id="foot-links">
             <a href="https://oursaviorlynchburg.org/" class="w3-bar-item w3-button" target="_blank">Connect with Our Savior Lutheran Church</a>
             <a href="https://www.lcms.org/" class="w3-bar-item w3-button" target="_blank">More about the LCMS</a>
+            <a href="https://catechism.cph.org/" class="w3-bar-item w3-button" target="_blank">Luther's Small Catechism</a>
         </div>
     </footer>
 
@@ -92,6 +102,7 @@
     <script src="proj8.js"></script>
     <script src="objects.js"></script>
     <script src="proj9.js" defer></script>
+    <script src="final.js" defer></script>
 </body>
 
 </html>
