second final commit

--- a/beliefs.html
+++ b/beliefs.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav>
-        <div class="w3-bar w3-theme" id="nav">
+        <div class="w3-bar w3-theme nav">
             <img src="images/LL_icon.png" id="icon" />
             <a href="index.html" class="w3-bar-item w3-button">Home</a>
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
@@ -54,7 +54,7 @@
                 <p>The LCMS fosters a strong commitment to doctrinal purity and confessional integrity, encouraging members to live
                 according to biblical teachings and to proclaim the Gospel faithfully in all aspects of life.</p>
             
-                <p>Form more information on our beliefs, feel free to contact us, or visit <a href="https://catechism.cph.org/">Luther's Small Catechism</a></p>
+                <p>Form more information on our beliefs, feel free to contact us, or visit <a href="https://catechism.cph.org/" target="_blank">Luther's Small Catechism</a></p>
         </div>
         </div>
  
