--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <nav>
-            <div class="w3-bar w3-theme" id="nav">
+            <div class="w3-bar w3-theme nav">
                 <img src="images/LL_icon.png" id="icon" />
                 <a href="index.html" class="w3-bar-item w3-button">Home</a>
                 <a href="events.html" class="w3-bar-item w3-button">Events</a>
@@ -44,7 +44,6 @@
                     Last Name: <input type="text" ng-model="lastName" class="input"><br>
                     <br>
                     Welcome: {{fullName()}}
-                    
                     </div>
 
                 <fieldset class="contact_forms">
