--- a/events.html
+++ b/events.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav>
-        <div class="w3-bar w3-theme" id="nav">
+        <div class="w3-bar w3-theme nav">
             <img src="images/LL_icon.png" id="icon" />
             <a href="index.html" class="w3-bar-item w3-button">Home</a>
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
