--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav>
-        <div class="w3-bar w3-theme" id="nav">
+        <div class="w3-bar w3-theme nav">
             <img src="images/LL_icon.png" id="icon" />
             <a href="index.html" class="w3-bar-item w3-button">Home</a>
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
@@ -34,7 +34,8 @@
                 We know that it can be hard to be a confessional Lutheran at a Baptist college like LU, but that's why it is so important to connect with your
                 fellow outsiders. We are connected with Our Savior Lutheran Church in Lynchburg, currently pastored by Reverend Aaron Yaeger. We are not an official
                 club under Liberty University, but we still do a lot of activites together, and we love to hang out together and get up to shenanigans on campus.
-                <br> <br>
+                <br><img src="images/love.jpg" id="banner"><br>
+                
                 We also carpool to church whenever there are services. If you are able to give a ride, or need a ride, 
                 click <a href="rides.html">here</a> to get in touch with us!
             </p>
@@ -49,6 +50,7 @@
         <div class="flex-container" id="foot-links">
             <a href="https://oursaviorlynchburg.org/" class="w3-bar-item w3-button" target="_blank">Connect with Our Savior Lutheran Church</a>
             <a href="https://www.lcms.org/" class="w3-bar-item w3-button" target="_blank">More about the LCMS</a>
+            <a href="https://catechism.cph.org/" class="w3-bar-item w3-button" target="_blank">Luther's Small Catechism</a>
         </div>
     
     </footer>
